socketServer/nginx-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: socket-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /websocket-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: websocket-service
            port:
              number: 80
